--- a/style.css
+++ b/style.css
@@ -8,11 +8,10 @@ header {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	gap: 20px;
-	padding: 20px;
-	background-color: var(--gray-50);
+	padding: 20px 40px;
+	background-color: white;
 }
-.main_nav {
+.main-nav {
 	display: flex;
     align-items: center;
     gap: 30px;
@@ -24,12 +23,13 @@ header {
 	padding: 0;
 	margin: 0;
 	display: flex;
+	align-items: center;
 	gap: 20px;
 
 }
 .main-nav li{
 	display: inline; /*Makes items horizontal*/
-	margin-right: 20px;
+	
 }
 
 .main-nav a{
@@ -39,14 +39,14 @@ header {
 	font-weight: 700;
 	font-size: 13px;
 	letter-spacing: 1.5px;
-	transition: color0.3s ease;
+	transition: color 0.3s ease;
 }
 .main-nav a:hover{
-	color: var(--gray-950);
+	color: #2C2640;
 
 }
 
-.plans_button{
+.view-plans-btn{
 	border: 2px solid #2C2640;
 	background-color: transparent;
 	padding: 12px 28px;
@@ -56,20 +56,22 @@ header {
 	letter-spacing: 1.5px;
 	cursor: pointer;
 	transition: all 0.3s ease;
+	display: inline-block;
+	color: #2C2640;
+	align-items: center;
 }
 
-.plans_button a{
+.view-plans-btn a{
 	text-decoration: none;
 	color: var(--gray-950);
 }
 
-.plans_button:hover{
-	background-color: var(--gray-950);
+.view-plans-btn:hover{
+	background-color: #2C2640;
+	color: var(--gray-50) !important;
 }
 
-.plans_button:hover a{
-	color: var(--gray-50);
-}
+
 #hero{
 	background-color: #2C2640;
 	height: 600px;
